--- a/stable_diffusion_webui_test.ipynb
+++ b/stable_diffusion_webui_test.ipynb
@@ -84,9 +84,9 @@
         "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/ControlNet/resolve/main/t2iadapter_color_sd14v1.pth -d /content/stable-diffusion-webui/extensions/sd-webui-controlnet/models -o t2iadapter_color_sd14v1.pth\n",
         "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/ControlNet/resolve/main/t2iadapter_canny_sd14v1.pth -d /content/stable-diffusion-webui/extensions/sd-webui-controlnet/models -o t2iadapter_canny_sd14v1.pth\n",
         "\n",
-        "!cp /content/drive/MyDrive/AI/novel_models/flame.safetensors /content/stable-diffusion-webui/models/Stable-diffusion\n",
-        "!cp /content/drive/MyDrive/AI/novel_models/model.ckpt /content/stable-diffusion-webui/models/Stable-diffusion\n",
-        "!cp /content/drive/MyDrive/leidian.pt /content/stable-diffusion-webui/embeddings\n",
+        "#!cp /content/drive/MyDrive/AI/novel_models/flame.safetensors /content/stable-diffusion-webui/models/Stable-diffusion\n",
+        "#!cp /content/drive/MyDrive/AI/novel_models/model.ckpt /content/stable-diffusion-webui/models/Stable-diffusion\n",
+        "#!cp /content/drive/MyDrive/leidian.pt /content/stable-diffusion-webui/embeddings\n",
         "\n",
         "!sed -i -e '''/    prepare_environment()/a\\    os.system\\(f\\\"\"\"sed -i -e ''\\\"s/dict()))/dict())).cuda()/g\\\"'' /content/stable-diffusion-webui/repositories/stable-diffusion-stability-ai/ldm/util.py\"\"\")''' /content/stable-diffusion-webui/launch.py\n",
         "!sed -i -e 's/fastapi==0.90.1/fastapi==0.89.1/g' /content/stable-diffusion-webui/requirements_versions.txt\n",
