--- a/stable_diffusion_webui_XRAI_DarkNight.ipynb
+++ b/stable_diffusion_webui_XRAI_DarkNight.ipynb
@@ -85,7 +85,7 @@
         "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/ControlNet/resolve/main/t2iadapter_color_sd14v1.pth -d /content/stable-diffusion-webui/extensions/sd-webui-controlnet/models -o t2iadapter_color_sd14v1.pth\n",
         "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/ControlNet/resolve/main/t2iadapter_canny_sd14v1.pth -d /content/stable-diffusion-webui/extensions/sd-webui-controlnet/models -o t2iadapter_canny_sd14v1.pth\n",
         "\n",
-        "#!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/sd14/resolve/main/sd-v1-4.ckpt -d /content/stable-diffusion-webui/models/Stable-diffusion -o sd-v1-4.ckpt\n",
+        "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/sd14/resolve/main/sd-v1-4.ckpt -d /content/stable-diffusion-webui/models/Stable-diffusion -o sd-v1-4.ckpt\n",
         "\n",
         "#!cp /content/drive/MyDrive/stable-diffusion-webui-XRAI/models/Stable-diffusion/flame.safetensors /content/stable-diffusion-webui/models/Stable-diffusion\n",
         "#!cp /content/drive/MyDrive/stable-diffusion-webui-XRAI/models/Stable-diffusion/model.ckpt /content/stable-diffusion-webui/models/Stable-diffusion\n",
